Eslint and Prettier
Splitting the config so our more backend orientated apps/packages uses
its own config without Svelte specific rules, and one for our frontend
oriented apps/packages that inherits from the node one, but adds Svelte
specific rules.

Also fixed so the Eslint validates prettier rules defined in the
prettierrc file, therefore we are able to remove the `prettier --check .` part from the linting command.

The eslint is now actually linting in the project as well without any
missing dependency problems.

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -10,7 +10,8 @@
                 "test": "vitest run",
                 "test:watch": "vitest",
                 "dev": "concurrently --kill-others \"tsc -p tsconfig.json --watch --preserveWatchOutput\" \"ts-node-dev -r tsconfig-paths/register -r dotenv/config --respawn ./src/app.ts | pino-pretty --colorize\"",
-                "lint": "prettier --check . && eslint ."
+                "lint": "eslint .",
+                "lint:fix": "eslint . --fix"
         },
         "keywords": [],
         "author": "StickerApp",
