--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -9,7 +9,8 @@
         "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
         "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
         "test": "vitest --passWithNoTests",
-        "lint": "prettier --check . && eslint .",
+        "lint": "eslint .",
+        "lint:fix": "eslint . --fix",
         "format": "prettier --write ."
     },
     "devDependencies": {
@@ -24,16 +25,8 @@
         "@sveltejs/adapter-node": "^5.2.2",
         "@sveltejs/kit": "^2.5.26",
         "@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
-        "@types/eslint": "8.56.0",
-        "@typescript-eslint/eslint-plugin": "^6.0.0",
-        "@typescript-eslint/parser": "^6.0.0",
         "autoprefixer": "^10.4.16",
-        "eslint": "^8.56.0",
-        "eslint-config-prettier": "^9.1.0",
-        "eslint-plugin-svelte": "^2.35.1",
         "postcss": "^8.4.33",
-        "prettier": "^3.1.1",
-        "prettier-plugin-svelte": "^3.1.2",
         "svelte": "^5.0.0-next.243",
         "svelte-check": "^3.6.0",
         "tailwindcss": "^3.4.1",
