--- a/apps/ui/.eslintignore
+++ b/apps/ui/.eslintignore
@@ -6,6 +6,10 @@ node_modules
 .env
 .env.*
 !.env.example
+.eslintrc.cjs
+svelte.config.js
+tailwind.config.js
+postcss.config.js
 
 # Ignore files for PNPM, NPM and YARN
 pnpm-lock.yaml
