--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -1,20 +1,21 @@
 {
-  "name": "@stickerapp-org/eslint-config",
-  "main": ".eslintrc.cjs",    
-  "version": "1.0.0",
-  "scripts": {
-    "lint": "prettier --check .",
-    "format": "prettier --write ."
-  },
-  "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "eslint": "^8.28.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-svelte": "^2.30.0"
-  },
-  "devDependencies": { 
-    "@stickerapp-org/prettier-config": "*" 
-  }
+    "name": "@stickerapp-org/eslint-config",
+    "main": "node.js",
+    "version": "1.0.0",
+    "scripts": {
+        "lint": "prettier --check .",
+        "lint:fix": "npm run format",
+        "format": "prettier --write ."
+    },
+    "peerDependencies": {
+        "@stickerapp-org/prettier-config": "*",
+        "@typescript-eslint/eslint-plugin": "6.0.0",
+        "@typescript-eslint/parser": "6.0.0",
+        "eslint": "8.28.0",
+        "eslint-config-prettier": "9.1.0",
+        "eslint-config-turbo": "2.1.2",
+        "eslint-plugin-import": "2.30.0",
+        "eslint-plugin-svelte": "2.44.0",
+        "eslint-plugin-prettier": "5.2.1"
+    }
 }
