--- a/packages/pallas/package.json
+++ b/packages/pallas/package.json
@@ -10,7 +10,8 @@
         "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
         "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
         "test": "vitest --passWithNoTests",
-        "lint": "prettier --check . && eslint .",
+        "lint": "eslint .",
+        "lint:fix": "eslint . --fix",
         "format": "prettier --write ."
     },
     "exports": {
@@ -39,23 +40,15 @@
         "@sveltejs/kit": "^2.5.26",
         "@sveltejs/package": "^2.3.4",
         "@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
-        "@types/eslint": "8.56.0",
-        "@typescript-eslint/eslint-plugin": "^6.0.0",
-        "@typescript-eslint/parser": "^6.0.0",
         "autoprefixer": "^10.4.16",
-        "eslint": "^8.56.0",
-        "eslint-config-prettier": "^9.1.0",
-        "eslint-plugin-svelte": "^2.35.1",
         "postcss": "^8.4.33",
-        "prettier": "^3.1.1",
-        "prettier-plugin-svelte": "^3.1.2",
         "publint": "^0.1.9",
         "svelte-check": "^3.6.0",
         "tailwind-merge": "^2.2.0",
         "tailwind-variants": "^0.1.20",
         "tailwindcss": "^3.4.1",
         "tslib": "^2.4.1",
-        "typescript": "^5.5.4",
+        "typescript": "5.5.4",
         "vite": "^5.0.3",
         "vitest": "^1.0.0"
     },
