--- a/turbo.json
+++ b/turbo.json
@@ -1,35 +1,20 @@
 {
-	"$schema": "https://turbo.build/schema.json",
-	"globalDependencies": [
-		"**/.env.*local"
-	],
-	"tasks": {
-		"build": {
-			"dependsOn": [
-				"^build"
-			],
-			"outputs": [
-				"dist/**"
-			]
-		},
-		"test": {
-			"dependsOn": [
-				"^test"
-			]
-		},
-		"lint": {
-			"dependsOn": [
-				"^lint"
-			]
-		},
-		"format": {
-			"dependsOn": [
-				"^format"
-			]
-		},
-		"dev": {
-			"cache": false,
-			"persistent": true
-		}
-	}
+    "$schema": "https://turbo.build/schema.json",
+    "globalDependencies": ["**/.env.*local"],
+    "tasks": {
+        "build": {
+            "dependsOn": ["^build"],
+            "outputs": ["dist/**"]
+        },
+        "test": {},
+        "lint": {},
+        "lint:fix": {},
+        "format": {
+            "dependsOn": ["^format"]
+        },
+        "dev": {
+            "cache": false,
+            "persistent": true
+        }
+    }
 }
