--- a/packages/api-contract/package.json
+++ b/packages/api-contract/package.json
@@ -40,7 +40,8 @@
     }
   },
   "dependencies": {
-    "@sinclair/typebox": "^0.32.13"
+    "@sinclair/typebox": "^0.32.13",
+    "@stickerapp-org/nomisma": "^1.0.1"
   },
   "devDependencies": {
     "@stickerapp-org/eslint-config": "*",
