--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -1,3 +1,5 @@
 services:
     emporio-api:
         image: stickerapp/emporio-api:9e7791a147
+    # emporio-ui:
+    #     image: stickerapp/emporio-api: __TAG__
