--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
         "format": "prettier --write \"**/*.{ts,tsx,md,svelte}\"",
         "generate-migration": "npm run generate-migration -w @stickerapp-org/emporio-api",
         "migrate": "npm run migrate -w @stickerapp-org/emporio-api",
-        "prepare": "ts-patch install -s"
+        "prepare": "ts-patch install -s && husky"
     },
     "devDependencies": {
         "@sinclair/typebox": "0.32.13",
-        "@stickerapp-org/eslint-config": "*",
         "@stickerapp-org/emporio-tsconfig": "*",
+        "@stickerapp-org/eslint-config": "*",
         "@stickerapp-org/prettier-config": "*",
         "@typescript-eslint/eslint-plugin": "6.0.0",
         "@typescript-eslint/parser": "6.0.0",
@@ -25,6 +25,8 @@
         "eslint-plugin-import": "2.30.0",
         "eslint-plugin-prettier": "5.2.1",
         "eslint-plugin-svelte": "2.44.0",
+        "husky": "^9.1.6",
+        "lint-staged": "^15.2.10",
         "prettier": "3.1.1",
         "prettier-plugin-svelte": "3.2.6",
         "ts-patch": "^3.1.2",
@@ -40,5 +42,10 @@
     "workspaces": [
         "apps/*",
         "packages/*"
-    ]
+    ],
+    "lint-staged": {
+        "*.{ts,tsx,md,svelte}": [
+            "prettier --write"
+        ]
+    }
 }
