Do not allow BPP for pixie dust for now (out of stock)

--- a/apps/api/configuration/filters/feature.yaml
+++ b/apps/api/configuration/filters/feature.yaml
@@ -44,6 +44,11 @@ rules:
             - attribute: item.attributes.height_mm
               operator: <=
               value: "{MaxSizes.LASER}"
+        - relationMode: AND
+          conditions:
+            - attribute: item.attributes.material
+              operator: "!=="
+              value: pixie_dust
 
   - keys:
       - backpaper_print
