--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -27,8 +27,9 @@
     "@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.33",
-    "svelte": "^5.0.0-next.243",
+    "svelte": "5.0.0-next.258",
     "svelte-check": "^3.6.0",
+    "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.4.1",
     "tslib": "^2.4.1",
     "typescript": "5.5.4",
