--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -25,7 +25,9 @@
     "@sveltejs/adapter-node": "^5.2.2",
     "@sveltejs/kit": "^2.5.26",
     "@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
+    "@tailwindcss/forms": "^0.5.9",
     "autoprefixer": "^10.4.16",
+    "class-variance-authority": "^0.7.0",
     "postcss": "^8.4.33",
     "svelte": "5.0.0-next.258",
     "svelte-check": "^3.6.0",
