--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -15,6 +15,8 @@
   },
   "devDependencies": {
     "@fontsource/fira-mono": "^4.5.10",
+    "@melt-ui/pp": "^0.3.2",
+    "@melt-ui/svelte": "^0.83.0",
     "@neoconfetti/svelte": "^1.0.0",
     "@sinclair/typebox": "0.32.13",
     "@stickerapp-org/emporio-api-contract": "*",
