Revert "Replace dynamic_string attr with sheet_name for fee"

--- a/apps/api/configuration/families/fee.yaml
+++ b/apps/api/configuration/families/fee.yaml
@@ -7,7 +7,7 @@ rules:
     required:
       - text
       - sheet_type
-      - sheet_name
+      - dynamic_string
       - quantity
   collections:
     constraint: ''
